--- a/.github/workflows/py-test.yml
+++ b/.github/workflows/py-test.yml
@@ -10,6 +10,8 @@ jobs:
       #----------------------------------------------
       - name: Check out repository
         uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
       - name: Set up python
         id: setup-python
         uses: actions/setup-python@v4
