feat: setup basic env-vars for DB access for all job steps.

--- a/.github/workflows/py-test-w-db.yml
+++ b/.github/workflows/py-test-w-db.yml
@@ -4,6 +4,12 @@ name: test
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: pg-pass
+      POSTGRES_DB: unitTestingDB-unit
+      POSTGRES_PORT: 5432
+      POSTGRES_HOST: localhost
     steps:
       #----------------------------------------------
       #       Check-out repo, set-up python + poetry
