--- a/py-setup-project/action.yml
+++ b/py-setup-project/action.yml
@@ -6,7 +6,7 @@ runs:
     #----------------------------------------------
     #       Check-out repo, set-up python + poetry
     #----------------------------------------------
-    - name: Check out repository
+    - name: Checkout Repo
       uses: actions/checkout@v3
     - name: Install poetry
       shell: bash
@@ -16,7 +16,7 @@ runs:
       run: |
         PY_VER=$(sed -n 's/^ *python *= *"[~^]*\([0-9\.]*\)"/\1/p' pyproject.toml)
         echo "PY_VERSION=$PY_VER" >> $GITHUB_ENV
-    - name: Set up python
+    - name: Setup Python v${{ env.PY_VERSION }}
       id: setup-python
       uses: actions/setup-python@v4
       with:
