chore: see if removing name uses name from action.

--- a/.github/workflows/py-test-w-db.yml
+++ b/.github/workflows/py-test-w-db.yml
@@ -12,8 +12,7 @@ jobs:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: localhost
     steps:
-      - name: Setup Project
-        uses: zerapix/reusable-workflows/py-run-tests@feature/sc-5232-pixydocsapi-workflow-for-deployment
+      - uses: zerapix/reusable-workflows/py-run-tests@feature/sc-5232-pixydocsapi-workflow-for-deployment
     services:
       postgres:
         image: postgres:13
