--- a/.github/workflows/py-test-w-db.yml
+++ b/.github/workflows/py-test-w-db.yml
@@ -12,7 +12,8 @@ jobs:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: localhost
     steps:
-      - uses: zerapix/reusable-workflows/py-run-tests@feature/sc-5232-pixydocsapi-workflow-for-deployment
+      - name: Setup and Test Project
+        uses: zerapix/reusable-workflows/py-run-tests@feature/sc-5232-pixydocsapi-workflow-for-deployment
     services:
       postgres:
         image: postgres:13
