feat: added version that includes a db service, when needed for unit tests.

--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -47,3 +47,17 @@ jobs:
           # todo: For now use AWS credentials directly
           AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: pg-pass
+          POSTGRES_DB: pixyDocsApi-unknown
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+        - 5432:5432
