--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -25,7 +25,10 @@ jobs:
         id: release
         with:
           release-type: python
-          package-name: singleton-type
+          package-name: ${{ inputs.package-name }}
+          monorepo-tags: v/
+          include-v-in-tag: false
+
       #----------------------------------------------
       # deploy via serverless
       #----------------------------------------------
@@ -49,8 +52,8 @@ jobs:
           # SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
 
           # todo: For now use AWS credentials directly
-          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     services:
       postgres:
         image: postgres:13
