chore: experimenting with mono-repo prefix option

--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           release-type: python
           package-name: ${{ inputs.package-name }}
-          monorepo-tags: v/
+          monorepo-tags: true
           include-v-in-tag: false
 
       #----------------------------------------------
