--- a/.github/workflows/py-force-deploy-w-db.yml
+++ b/.github/workflows/py-force-deploy-w-db.yml
@@ -11,7 +11,7 @@ jobs:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: localhost
     steps:
-      - uses: zerapix/reusable-workflows/py-run-tests@feature/sc-5232-pixydocsapi-workflow-for-deployment
+      - uses: zerapix/reusable-workflows/py-run-tests@main
       #----------------------------------------------
       # deploy via serverless
       #----------------------------------------------
