--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -19,7 +19,7 @@ jobs:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: localhost
     steps:
-      - uses: zerapix/reusable-workflows/py-run-tests@feature/sc-5232-pixydocsapi-workflow-for-deployment
+      - uses: zerapix/reusable-workflows/py-run-tests@main
 
       # release-please, increments version and tags releases.
       - uses: google-github-actions/release-please-action@v3
@@ -57,8 +57,8 @@ jobs:
     concurrency: deploy-dev
     if: ${{ needs.create-release.created-release }}
     steps:
-      - uses: zerapix/reusable-workflows/py-setup-project@feature/sc-5232-pixydocsapi-workflow-for-deployment
-      - uses: zerapix/reusable-workflows/py-deploy-serverless@feature/sc-5232-pixydocsapi-workflow-for-deployment
+      - uses: zerapix/reusable-workflows/py-setup-project@main
+      - uses: zerapix/reusable-workflows/py-deploy-serverless@main
         with:
           environment: dev
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
