--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -45,8 +45,8 @@ jobs:
     needs: create-release
     runs-on: ubuntu-latest
     steps:
-      - name: Dump out needs.create-release.created-release
-        run: echo '${{ toJSON(needs.create-release.created-release) }}'
+      - name: Dump out needs.create-release.outputs.created-release
+        run: echo '${{ toJSON(needs.create-release.outputs.created-release) }}'
 
   # Create Separate Job, to distinguish release-creation from deployment
   # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: dev
     concurrency: deploy-dev
-    if: ${{ needs.create-release.created-release }}
+    if: ${{ needs.create-release.outputs.created-release }}
     steps:
       - uses: zerapix/reusable-workflows/py-setup-project@main
       - uses: zerapix/reusable-workflows/py-deploy-serverless@main
