feat: check for a pre-serverless script file, to run just before serverless deploy.

--- a/py-deploy-serverless/action.yml
+++ b/py-deploy-serverless/action.yml
@@ -25,6 +25,18 @@ runs:
     - name: Install Yarn/Serverless Deps Into ${{ steps.setup_node.outputs.node-version }}
       run: yarn install --frozen-lockfile
       shell: bash
+    - name: Check For Pre-Serverless Hook Script
+      id: check_pre_serverless_hook_file
+      uses: andstor/file-existence-action@v2
+      with:
+        files: .github/hooks/sls-deploy-pre.sh
+    - name: Run Pre-Serverless Hook Script
+      if: steps.check_pre_serverless_hook_file.outputs.files_exists == 'true'
+      run: bash .github/hooks/sls-deploy-pre.sh
+      env:
+        APP_ENV: ${{ inputs.environment }}
+        AWS_ACCESS_KEY_ID: ${{ inputs.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ inputs.AWS_SECRET_ACCESS_KEY }}
     - name: Serverless Deploy to dev
       # Hard-coding the environment for now, when we start dealing with other environments
       # look into environment feature of github actions/workflows.
