--- a/.github/workflows/py-publish.yml
+++ b/.github/workflows/py-publish.yml
@@ -8,6 +8,8 @@ jobs:
     concurrency: deploy-${{ inputs.environment }}
     steps:
       - uses: zerapix/reusable-workflows/py-run-tests@main
+        with:
+          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
       - uses: zerapix/reusable-workflows/py-publish-fury@main
         with:
           GEMFURY_PUBLISH_TOKEN: ${{ secrets.GEMFURY_PUBLISH_TOKEN }}
