--- a/.github/workflows/py-test.yml
+++ b/.github/workflows/py-test.yml
@@ -8,3 +8,5 @@ jobs:
     steps:
       - name: Setup and Test Project
         uses: zerapix/reusable-workflows/py-run-tests@main
+        with:
+          GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
