--- a/.github/workflows/py-merge-to-main.yml
+++ b/.github/workflows/py-merge-to-main.yml
@@ -1,6 +1,6 @@
 # Use this if you just want to have unit-tests + release-please ran to create (pre-)releases.
 # does not do anything else; ie: no db, serverless, publishing, etc.
-name: Create (Pre-)Release
+name: Create (Pre-)Release (reusable)
 on:
   workflow_call:
   push:
