--- a/py-run-tests/action.yml
+++ b/py-run-tests/action.yml
@@ -4,6 +4,10 @@ inputs:
   GEMFURY_DEPLOY_TOKEN:
     description: Gemfury Deploy Token
     required: true
+  RUN_TESTS:
+    description: If equal to exactly 'false', will skip running tests.
+    required: false
+    default: 'true'
 runs:
   using: "composite"
   steps:
@@ -12,5 +16,6 @@ runs:
       with:
         GEMFURY_DEPLOY_TOKEN: ${{ inputs.GEMFURY_DEPLOY_TOKEN }}
     - name: Run tests
+      if: ${{ inputs.RUN_TESTS != 'false' }}
       shell: bash
       run: poetry run pytest
