--- a/.github/workflows/py-merge-to-main.yml
+++ b/.github/workflows/py-merge-to-main.yml
@@ -5,6 +5,12 @@
 name: Create (Pre-)Release (reusable)
 on:
   workflow_call:
+    inputs:
+      RUN_TESTS:
+        required: false
+        type: string
+        description: Python package we are versioning/deploying; only skips if string is set to 'false' (using string, as composite actions only use strings)
+        default: 'true'
   push:
     branches:
       - main
@@ -14,3 +20,5 @@ jobs:
     # it will either create a PR with a release candidate or create a github release object.
     uses: zerapix/reusable-workflows/.github/workflows/py-create-release.yml@main
     secrets: inherit
+    with:
+      RUN_TESTS: ${{ inputs.RUN_TESTS }}
