fix: various fixes for poetry when grabbing info via tomlkit.

--- a/.github/workflows/py-merge-to-main-publish.yml
+++ b/.github/workflows/py-merge-to-main-publish.yml
@@ -13,7 +13,7 @@ jobs:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
       - name: Retrieve Project Package
         run: |
-          PY_OUTPUT=$(poetry run python -c "import tomlkit; import pathlib; print(tomlkit.parse(pathlib.Path('pyproject.toml').read_text())['tool']['poetry']['name'], end='')")
+          PY_OUTPUT=$(poetry run -q python -c "import tomlkit; import pathlib; print(tomlkit.parse(pathlib.Path('pyproject.toml').read_text())['tool']['poetry']['name'], end='')")
           echo "PY_PKG=$PY_OUTPUT" >> $GITHUB_ENV
       - uses: google-github-actions/release-please-action@v3
         id: release
