fix: pass auto-deploy environment name variable into serverless deploy action
Right now, we don't pass it in; it's hard-coded to just dev.

This bug fix will support account-dev type environments.

--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -75,7 +75,7 @@ jobs:
           GEMFURY_DEPLOY_TOKEN: ${{ secrets.GEMFURY_DEPLOY_TOKEN }}
       - uses: zerapix/reusable-workflows/py-deploy-serverless@main
         with:
-          environment: dev
+          environment: ${{ inputs.auto-release-environment }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
