feat: always use `--force`; in future refactor to make it an option (changeable via run-workflow option).

--- a/py-deploy-serverless/action.yml
+++ b/py-deploy-serverless/action.yml
@@ -42,7 +42,7 @@ runs:
       # Hard-coding the environment for now, when we start dealing with other environments
       # look into environment feature of github actions/workflows.
       run: |
-        yarn sls deploy --verbose --stage ${{ inputs.environment }}
+        yarn sls deploy --verbose --stage ${{ inputs.environment }} --force
         yarn sls doctor
       shell: bash
       env:
