--- a/.github/workflows/py-merge-to-main-publish.yml
+++ b/.github/workflows/py-merge-to-main-publish.yml
@@ -26,7 +26,7 @@ jobs:
           release-type: python
           package-name: ${{ env.PY_PKG }}
 
-  # Create Separate Job, to distinguish release-creation from deployment
+  # Create Separate Job, to distinguish release-creation from publishing
   # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
   publish-release:
     needs: create-release
