--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -35,8 +35,9 @@ jobs:
 
       # TODO: Next two steps are the same as in `py-create-release.yml`,
       # TODO: should put it in action to reuse code/steps.
+      # TODO: Currently working in this ^ todo...
       - name: Install tomlkit
-        # Ensure tomlkit is installed so I can retrieve package info on next step.
+        # Ensure tomlkit is installed, so I can retrieve package info on next step.
         # In Python 3.11, there is now a built-in `tomllib` library we can use.
         # Once everything is on Python 3.11, we can change this code to use `tomllib` instead.
         run: poetry run pip install tomlkit
