feat: support a different stage name vs environment name.

--- a/.github/workflows/py-deployment-w-serverless-db.yml
+++ b/.github/workflows/py-deployment-w-serverless-db.yml
@@ -6,12 +6,22 @@ on:
         description: Environment to deploy in.
         type: environment
         default: dev
+      override-stage-name:
+        required: false
+        type: string
+        default: ${{ inputs.environment }}
+        description: Defaults to the environment name; use this if the stage is different; like if its an account-wide "all" stage.
   workflow_call:
     inputs:
       environment:
         type: string
         default: dev
         description: Environment to deploy in.
+      override-stage-name:
+        required: false
+        type: string
+        default: ${{ inputs.environment }}
+        description: Defaults to the environment name; use this if the stage is different; like if its an account-wide "all" stage.
 jobs:
   deploy:
     environment: ${{ inputs.environment }}
@@ -30,6 +40,7 @@ jobs:
       - uses: zerapix/reusable-workflows/py-deploy-serverless@main
         with:
           environment: ${{ inputs.environment }}
+          override-stage-name: ${{ inputs.override-stage-name}}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     services:
