--- a/.github/workflows/py-merge-to-main-serverless-w-db.yml
+++ b/.github/workflows/py-merge-to-main-serverless-w-db.yml
@@ -7,6 +7,11 @@ on:
         type: string
         default: dev
         description: Defaults to dev; this is the environment to auto-release into when release is created..
+      override-stage-name:
+        required: false
+        type: string
+        default: ${{ inputs.auto-release-environment }}
+        description: Defaults to the environment name; use this if the stage is different; like if its an account-wide "all" stage.
       release-branch:
         required: false
         type: string
@@ -83,6 +88,7 @@ jobs:
       - uses: zerapix/reusable-workflows/py-deploy-serverless@main
         with:
           environment: ${{ inputs.auto-release-environment }}
+          override-stage-name: ${{ inputs.override-stage-name}}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
