--- a/py-deploy-serverless/action.yml
+++ b/py-deploy-serverless/action.yml
@@ -4,6 +4,11 @@ inputs:
   environment:
     description: Environmental name to deploy in.
     required: true
+  override-stage-name:
+    description: Environmental name to deploy in.
+    required: false
+    default: ${{ inputs.environment }}
+
   AWS_ACCESS_KEY_ID:
     description: AWS Key ID to use while deploying.
     required: true
@@ -42,7 +47,7 @@ runs:
       # Hard-coding the environment for now, when we start dealing with other environments
       # look into environment feature of github actions/workflows.
       run: |
-        yarn sls deploy --verbose --stage ${{ inputs.environment }} --force
+        yarn sls deploy --verbose --stage ${{ inputs.override-stage-name }} --force
         yarn sls doctor
       shell: bash
       env:
